# DIA-NN-GUI

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
src/diannwebgui/: app.py  data.py  gui.py  hpc_manager.py  login.py  run.py  utils.py
src/diannwebgui.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/diannwebgui/pages/: data.py  gui.py  projects.py  search.py  speclib.py
